# kicad-zone-resistance

./: .gitignore  README.md  conftest.py  deploy.ps1  fill_res_action.py  metadata.json  plugin.json  pyproject.toml  requirements.txt
.gitea/workflows/: build-pcm.yml  ci.yml
docs/: NIXOS.md  RELEASING.md
docs/release-notes/: v1.2.1.md  v1.2.2.md  v1.3.0.md
fill_resistance/: __init__.py  adaptive.py  board_io.py  config.py  dialog.py  errors.py  geometry.py  main.py  overlay.py  pipeline.py  plots.py  progress.py  quadtree.py  raster.py  report.py  skin.py  solver.py  standalone.py  trim.py
smoke/: smoke_probe.py
tests/: test_adaptive.py  test_barrel_contacts.py  test_board_io_api.py  test_buildup.py  test_capping.py  test_contacts.py  test_geometry.py  test_multilayer.py  test_overlay.py  test_platform_fallbacks.py  test_py39_compat.py  test_quadtree.py  test_raster.py  test_skin.py  test_solver.py  test_tracks.py  test_trim.py  test_version.py  util.py
tools/: adaptive_proto.py  api_probe.py  build_package.py  ci-fhs.nix  deploy.py  gen_icons.py  gen_readme_figs.py  kicad_heatmap_overlay.py  kicad_overlay_test.py
